clusters/production/apps/rabbitmq-production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rabbitmq-production
  labels:
    app.kubernetes.io/part-of: rabbitmq-production
